# deepvoxel-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  deepvoxel_harness_BUILD_PLAN.md  pyproject.toml  ruff.toml
configs/: template.yaml
deepvoxel/application/: runner.py
deepvoxel/application/nodes/: node_00_intake.py  node_01_patents.py
deepvoxel/application/prompts/: founding_team.md  intake.md  patents_analyze.md  patents_identify.md
deepvoxel/domain/: engagement.py
deepvoxel/infrastructure/: anthropic_client.py  config_loader.py
inspector/: harness_inspector.py
tests/: test_engagement_replay.py
tools/: inspect.py  run.py
