[project]
name = "deepvoxel-harness"
version = "0.1.0"
description = "deepVoxel CI Report Generation Harness"
authors = [{ name = "Chuck Hahm" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.2",
    "poethepoet>=0.29.0",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.9",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepvoxel"]

[tool.poe]
executor = { type = "uv" }

[tool.poe.tasks]
run-engagement = "uv run python -m tools.run --engagement"
run-replay     = "uv run python -m tools.run --replay"
run-inspector  = "uv run python -m tools.inspect"
lint-check     = "uv run ruff check ."
format-check   = "uv run ruff format --check ."
lint-fix       = "uv run ruff check --fix ."
format-fix     = "uv run ruff format ."
gitleaks-check = "docker run -v .:/src zricethezav/gitleaks:latest dir /src/deepvoxel"

[tool.poe.tasks.test]
cmd = "uv run pytest tests/"
env = { ENV_FILE = ".env.testing" }
